--- a/index.html
+++ b/index.html
@@ -25,6 +25,7 @@
     function gtag() { dataLayer.push(arguments); }
     gtag('js', new Date());
 
+    gtag('config', 'G-KFBQGMVJB5');
     gtag('config', 'AW-17444392655');
   </script>
 
