--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
   <meta property="og:title" content="Tractări Auto Moldova 24/7 - TurboTract">
   <meta property="og:description" content="Servicii tractări auto 24/7 în Moldova. Transport mașini pe platformă, tractări motociclete, camioane. Vulcanizare mobilă, PECO mobilă. Prețuri competitive."
   <meta property="og:type" content="website">
-  <link rel="canonical" href="/">
+  <link rel="canonical" href="https://turbotract.com/">
   <meta data-intl-tel-input-cdn-path="intlTelInput/">
 </head>
 
