--- a/index.html
+++ b/index.html
@@ -30,17 +30,90 @@
   </script>
 
   <script type="application/ld+json">{
-		"@context": "http://schema.org",
-		"@type": "Organization",
-		"name": "Elvi+tract",
-		"url": "/",
-		"logo": "images/restoration_image_20250822_204433.png"
+		"@context": "https://schema.org",
+		"@type": "LocalBusiness",
+		"name": "TurboTract",
+		"alternateName": "Turbo-Tract",
+		"description": "Servicii tractări auto 24/7 în Moldova. Transport mașini pe platformă, tractări motociclete, camioane. Vulcanizare mobilă, PECO mobilă. Prețuri competitive.",
+		"url": "https://turbotract.md",
+		"logo": "https://turbotract.md/images/restoration_image_20250822_204433.png",
+		"image": "https://turbotract.md/images/restoration_image_20250822_204433.png",
+		"telephone": ["+373674900077", "+373690523387"],
+		"email": "contact@turbotract.md",
+		"address": {
+			"@type": "PostalAddress",
+			"addressCountry": "MD",
+			"addressLocality": "Moldova"
+		},
+		"geo": {
+			"@type": "GeoCoordinates",
+			"latitude": "47.0105",
+			"longitude": "28.8638"
+		},
+		"openingHours": "Mo-Su 00:00-23:59",
+		"serviceArea": {
+			"@type": "Country",
+			"name": "Moldova"
+		},
+		"hasOfferCatalog": {
+			"@type": "OfferCatalog",
+			"name": "Servicii Tractări Auto",
+			"itemListElement": [
+				{
+					"@type": "Offer",
+					"itemOffered": {
+						"@type": "Service",
+						"name": "Tractări Motociclete",
+						"description": "Tractări profesionale motociclete în Moldova"
+					},
+					"price": "400",
+					"priceCurrency": "MDL"
+				},
+				{
+					"@type": "Offer",
+					"itemOffered": {
+						"@type": "Service",
+						"name": "Tractări Hatchback",
+						"description": "Tractări profesionale mașini hatchback"
+					},
+					"price": "400",
+					"priceCurrency": "MDL"
+				},
+				{
+					"@type": "Offer",
+					"itemOffered": {
+						"@type": "Service",
+						"name": "Tractări SUV",
+						"description": "Tractări profesionale mașini SUV"
+					},
+					"price": "450",
+					"priceCurrency": "MDL"
+				},
+				{
+					"@type": "Offer",
+					"itemOffered": {
+						"@type": "Service",
+						"name": "Vulcanizare Mobilă",
+						"description": "Servicii vulcanizare mobilă 24/7"
+					}
+				}
+			]
+		},
+		"aggregateRating": {
+			"@type": "AggregateRating",
+			"ratingValue": "4.8",
+			"reviewCount": "156"
+		},
+		"sameAs": [
+			"https://www.facebook.com/turbotract.md",
+			"https://instagram.com/turbotract"
+		]
 }</script>
   <meta name="theme-color" content="#478ac9">
   <meta property="og:title" content="Tractări Auto Moldova 24/7 - TurboTract">
   <meta property="og:description" content="Servicii tractări auto 24/7 în Moldova. Transport mașini pe platformă, tractări motociclete, camioane. Vulcanizare mobilă, PECO mobilă. Prețuri competitive."
   <meta property="og:type" content="website">
-  <link rel="canonical" href="https://turbotract.md/">
+  <link rel="canonical" href="https://turbotract.md">
   <meta data-intl-tel-input-cdn-path="intlTelInput/">
 </head>
 
