--- a/products/crossover.html
+++ b/products/crossover.html
@@ -1,10 +1,10 @@
 <!DOCTYPE html>
-<html style="font-size: 16px;" lang="ru"><head>
+<html style="font-size: 16px;" lang="ro"><head>
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta charset="utf-8">
-    <meta name="keywords" content="Product 1 Title">
-    <meta name="description" content="">
-    <title>Product Details Template</title>
+    <meta name="keywords" content="tractari crossover Moldova, tractare masina crossover, transport crossover, evacuator crossover, servicii tractari crossover, pret tractari crossover">
+    <meta name="description" content="Tractări crossover în Moldova - servicii profesionale de transport și evacuare mașini crossover. Preț de la 400 MDL. Intervenție rapidă 24/7. Contactați-ne: +373 674 90 077">
+    <title>Tractări Crossover Moldova | Transport Mașini Crossover | TurboTract</title>
     <link rel="stylesheet" href="../nicepage.css" media="screen">
 <link rel="stylesheet" href="../Product-Details-Template.css" media="screen">
     <script class="u-script" type="text/javascript" src="../jquery.js" defer=""></script>
@@ -21,11 +21,13 @@
 		"logo": "images/restoration_image_20250822_204433.png"
 }</script>
     <meta name="theme-color" content="#478ac9">
-    <meta property="og:title" content="Product Details Template">
-    <meta property="og:description" content="">
+    <meta property="og:title" content="Tractări Crossover Moldova | Transport Mașini Crossover | TurboTract">
+    <meta property="og:description" content="Tractări crossover în Moldova - servicii profesionale de transport și evacuare mașini crossover. Preț de la 400 MDL. Intervenție rapidă 24/7.">
     <meta property="og:type" content="website">
+    <meta property="og:url" content="https://turbotract.md/products/crossover.html">
+    <link rel="canonical" href="https://turbotract.md/products/crossover.html">
   <meta data-intl-tel-input-cdn-path="intlTelInput/"></head>
-  <body data-path-to-root="../" data-include-products="true" class="u-body u-clearfix u-xl-mode" data-lang="ru"><header class="u-clearfix u-grey-15 u-header u-sticky u-sticky-c6f1 u-header" id="header"><div class="u-clearfix u-sheet u-valign-middle-lg u-valign-middle-sm u-sheet-1">
+  <body data-path-to-root="../" data-include-products="true" class="u-body u-clearfix u-xl-mode" data-lang="ro"><header class="u-clearfix u-grey-15 u-header u-sticky u-sticky-c6f1 u-header" id="header"><div class="u-clearfix u-sheet u-valign-middle-lg u-valign-middle-sm u-sheet-1">
         <a href="#" class="u-flip-horizontal u-image u-logo u-image-1" data-image-width="736" data-image-height="1600">
           <img src="../images/restoration_image_20250822_204433.png" class="u-logo-image u-logo-image-1">
         </a>
