--- a/products/motococleta.html
+++ b/products/motococleta.html
@@ -1,10 +1,10 @@
 <!DOCTYPE html>
-<html style="font-size: 16px;" lang="ru"><head>
+<html style="font-size: 16px;" lang="ro"><head>
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta charset="utf-8">
-    <meta name="keywords" content="Product 1 Title">
-    <meta name="description" content="">
-    <title>Product Details Template</title>
+    <meta name="keywords" content="tractari motociclete Moldova, tractare motocicleta, transport motociclete, evacuator motociclete, servicii tractari motociclete, pret tractari motociclete">
+    <meta name="description" content="Tractări motociclete în Moldova - servicii profesionale de transport și evacuare motociclete. Preț de la 400 MDL. Intervenție rapidă 24/7. Contactați-ne: +373 674 90 077">
+    <title>Tractări Motociclete Moldova | Transport Motociclete | TurboTract</title>
     <link rel="stylesheet" href="../nicepage.css" media="screen">
 <link rel="stylesheet" href="../Product-Details-Template.css" media="screen">
     <script class="u-script" type="text/javascript" src="../jquery.js" defer=""></script>
@@ -21,11 +21,13 @@
 		"logo": "images/restoration_image_20250822_204433.png"
 }</script>
     <meta name="theme-color" content="#478ac9">
-    <meta property="og:title" content="Product Details Template">
-    <meta property="og:description" content="">
+    <meta property="og:title" content="Tractări Motociclete Moldova | Transport Motociclete | TurboTract">
+    <meta property="og:description" content="Tractări motociclete în Moldova - servicii profesionale de transport și evacuare motociclete. Preț de la 400 MDL. Intervenție rapidă 24/7.">
     <meta property="og:type" content="website">
+    <meta property="og:url" content="https://turbotract.md/products/motococleta.html">
+    <link rel="canonical" href="https://turbotract.md/products/motococleta.html">
   <meta data-intl-tel-input-cdn-path="intlTelInput/"></head>
-  <body data-path-to-root="../" data-include-products="true" class="u-body u-clearfix u-xl-mode" data-lang="ru"><header class="u-clearfix u-grey-15 u-header u-sticky u-sticky-c6f1 u-header" id="header"><div class="u-clearfix u-sheet u-valign-middle-lg u-valign-middle-sm u-sheet-1">
+  <body data-path-to-root="../" data-include-products="true" class="u-body u-clearfix u-xl-mode" data-lang="ro"><header class="u-clearfix u-grey-15 u-header u-sticky u-sticky-c6f1 u-header" id="header"><div class="u-clearfix u-sheet u-valign-middle-lg u-valign-middle-sm u-sheet-1">
         <a href="#" class="u-flip-horizontal u-image u-logo u-image-1" data-image-width="736" data-image-height="1600">
           <img src="../images/restoration_image_20250822_204433.png" class="u-logo-image u-logo-image-1">
         </a>
@@ -84,7 +86,7 @@ c6.177,6.18,9.262,14.271,9.262,22.366C354.708,234.018,351.617,242.115,345.441,24
     
     
     <footer class="u-align-center u-clearfix u-container-align-center u-footer u-grey-80 u-footer" id="footer"><div class="u-clearfix u-sheet u-sheet-1">
-        <p class="u-small-text u-text u-text-variant u-text-1">Пример текста. Кликните, чтобы выбрать элемент "Текст".</p>
+        <p class="u-small-text u-text u-text-variant u-text-1">TurboTract - Servicii de tractări auto și motociclete în Moldova. Contactați-ne pentru asistență rutieră profesională 24/7.</p>
       </div></footer>
   <section class="u-black u-clearfix u-container-style u-dialog-block u-opacity u-opacity-70 u-payment-dialog u-valign-middle u-dialog-section-4" id="popup-b7c8">
       <div class="u-align-center u-container-align-center u-container-style u-dialog u-radius-25 u-shape-round u-white u-dialog-1">
