--- a/index.html
+++ b/index.html
@@ -150,7 +150,7 @@
       <div class="header-contact">
         <div class="phone-numbers">
           <a href="tel:+37367490077" class="phone-link">
-            <span class="phone-icon">📞</span>
+            <span class="phone-icon"></span>
             <span class="phone-text">+373 674 90 077</span>
           </a>
           <a href="tel:+37369052387" class="phone-link">
