--- a/index.html
+++ b/index.html
@@ -322,12 +322,9 @@
               <h4 class="u-align-center u-custom-font u-font-georgia u-text u-text-default u-text-7">Vulcanizare Mobilă
               </h4>
               <img class="u-expanded-width u-image u-image-contain u-image-4"
-                src="images/viber_image_2025-08-25_02-21-46.jpg" data-image-width="901" data-image-height="1600">
+                src="./photo_2025-11-03_16-55-11.jpg" data-image-width="901" data-image-height="1600">
               <p class="u-align-center u-custom-item u-text u-text-8">
-                <a class="u-active-none u-border-none u-btn u-button-link u-button-style u-hover-none u-none u-text-palette-1-base u-btn-1"
-                  href="tel:079123000"><span class="u-file-icon u-icon"><img src="images/avatar.png"
-                      alt=""></span>&nbsp;Apelează-ne
-                </a>
+                
               </p>
             </div>
           </div>
@@ -600,8 +597,7 @@
           <div class="u-align-center u-container-style u-list-item u-repeater-item">
             <div
               class="u-container-layout u-similar-container u-valign-top-lg u-valign-top-md u-valign-top-sm u-valign-top-xl u-container-layout-1">
-              <img class="u-image u-image-contain u-image-default u-preserve-proportions u-image-1"
-                src="images/Frtitlu-1.jpg" alt="" data-image-width="578" data-image-height="297">
+              
             </div>
           </div>
           <div class="u-align-center u-container-style u-list-item u-repeater-item">
